--- a/app/views/kittens/index.html.erb
+++ b/app/views/kittens/index.html.erb
@@ -12,7 +12,8 @@
   <tbody>
     <% @kittens.each do |kitten| %>
       <tr>
-        <td><%= link_to 'Show', kitten %></td>
+        <td><%= link_to kitten.name.humanize, kitten %></td>
+        
         <td><%= link_to 'Edit', edit_kitten_path(kitten) %></td>
         <td><%= link_to 'Destroy', kitten, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
